--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "homepage": "https://github.com/vrunoa/npm-list-scripts#readme",
   "dependencies": {
+    "chalk": "^1.1.3",
     "find-root": "^1.0.0",
     "semafor": "0.0.1"
   },
